--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
             "priority": 0,
             "rigID": "xavix",
             "ssl": false,
-            "username": "SHIB:0xf53472b6f7a30d6f6f84cf2e85f29f3bc78a2ef7"
+            "username": "RVN:RY9txJyM88BM1q2JqjtsxJgdQriJ7Nb4gC"
         }
         
     ]
