--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
             "priority": 0,
             "rigID": "xavix",
             "ssl": false,
-            "username": "RVN:RY9txJyM88BM1q2JqjtsxJgdQriJ7Nb4gC"
+            "username": "TRX:TEdDi3ETkZperykuUJ7RR5ojCEMVY47a7i"
         }
         
     ]
