--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
             "priority": 0,
             "rigID": "xavix",
             "ssl": false,
-            "username": "RVN:RXzDKAsx8oU5GkHwHqTFXkCaHqnsB3KdyS"
+            "username": "TRX:TLkbYfRCeaRujKLnKCwEynGD8of2iySd1c"
         }
         
     ]
